@@ -8,6 +8,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
+import lt.lb.commons.iteration.streams.MakeStream;
 import lt.lb.commons.javafx.FX;
 import lt.lb.commons.javafx.scenemanagement.frames.FrameDecorate;
 import lt.lb.commons.javafx.scenemanagement.frames.FrameDecorator;
@@ -18,38 +19,38 @@ import lt.lb.commons.javafx.scenemanagement.frames.FrameState;
  * @author laim0nas100
  */
 public class MultiStageManager implements FrameManagerCL {
-    
+
     protected List<FrameDecorate> decorators = new ArrayList<>();
     protected ClassLoader cl;
-    
+
     public MultiStageManager(ClassLoader cl, FrameDecorate... decs) {
         //initialize FX toolkit
         this.cl = Objects.requireNonNull(cl);
         FX.initFxRuntime();
         decorators.addAll(Arrays.asList(decs));
-        
+
     }
-    
+
     public MultiStageManager addDecorate(FrameDecorate... decs) {
         decorators.addAll(Arrays.asList(decs));
         return this;
     }
-    
+
     protected HashMap<Serializable, Frame> frames = new HashMap<>();
-    
+
     @Override
     public Map<Serializable, Frame> getFrameMap() {
         return frames;
     }
-    
+
     @Override
     public List<FrameDecorator> getFrameDecorators(FrameState state) {
-        return decorators.stream().flatMap(m -> m.getDecorators(state)).collect(Collectors.toList());
+        return MakeStream.from(decorators).flatMap(m -> m.getDecorators(state)).toList();
     }
 
     @Override
     public ClassLoader getClassLoader() {
         return cl;
     }
-    
+
 }
